# cnes

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  Makefile  README.md  build_watch.sh  vcpkg.json
.github/actions/cache_cc65/: action.yml
.github/actions/cache_cpm/: action.yml
.github/actions/cache_famistudio/: action.yml
.github/actions/cache_sdl/: action.yml
.github/workflows/: build-nes.yml  build.yml  build_linux.yml  build_nes.yml  build_pc.yml  build_win_msvc.yml
cmake/: CNESAudioGen.cmake  CNESConfig.cmake.in  buildSDL2.cmake  cc65-toolchain.cmake
example/: CMakeLists.txt  Makefile  build_watch.sh  cnes_example.nes
example/assets/: cnes_example.tiled-session
example/assets/audio/: megalovania.fms  metal_crusher.fms  turok_cave.fms
example/assets/maps/: example.tiled-session  test.tmx  title_screen.nss  title_screen.tmx  title_screen.xcf  well.tmx
example/assets/maps/scratch/: crystalis.pal  crystalis_town.chr  crystalis_town.chr.bak  crystalis_town.xcf  crystalis_town_tileset.tsx  test.nss  test2.nss  title_screen.nss  title_screen.tmx  title_screen.xcf  two.pal  well.tsx  whatever.pal
example/src/: main.c  nes.cfg  nesheader.c
inc/: audio.h  cnes.h  cnes_defaults.h  common_types.h  drawing.h  engine.h  joypad.h  nes2header.h
lib/: cnes.nes.lib  cnes.pc.lib
ports/bgfx/: portfile.cmake  vcpkg.json
scripts/: Image2Map.py  MapWriter.py  audio_engine_template.s  bin2h.py  generate_audio.py  generate_map_data.py  nes_audio_template.s  nes_tilemap_template.s  pb8.py  pilbmp2nes.py  tokumaru.py
src/: CMakeLists.txt
src/inc/: audio.h  cnes.h  cnes_macros.h  common_types.h  drawing.h  engine.h  joypad.h  nes2header.h  object.h  object_p.inc  state.h  tilemap.h
src/nes/: audio.s  common.inc  common.s  common_ppu.s  drawing.s  driver.s  engine.s  joypad.s  nes.c
src/pc/: audio.c  audio.cpp  audio.h  cnes_internal.h  core.cpp  core.h  internal.h  joypad.c  joypad.cpp  joypad.h  renderer.c  renderer.cpp  renderer.h  sdl.c  sdl.cpp
tools/: nes.gp1
tools/Linux/famistudio/: FamiStudio.exe.config
tools/NEXXT_0_9_1/: changelog091.txt  preferences.cfg
tools/NEXXT_0_9_1/Documentation/: Hotkeys_CHR_Editor.txt  quicknotes.txt
tools/Windows/NEXXT_0_9_1/Documentation/: Clipboard format.txt  Hotkeys_Main_Editor.txt
tools/Windows/NEXXT_0_9_1/Resources/: rle_ca65.asm
tools/Windows/cc65/lib/: nes.lib  none.lib
tools/Windows/famistudio/: FamiStudio.ini
tools/cc65/lib/: apple2.lib  apple2enh.lib  atari.lib  atari2600.lib  atari5200.lib  atarixl.lib  atmos.lib  c128.lib  c16.lib  c64.lib  cbm510.lib  cbm610.lib  creativision.lib  cx16.lib  gamate.lib  geos-apple.lib  geos-cbm.lib  lynx.lib  nes.lib  none.lib  osic1p.lib  pce.lib  pet.lib  plus4.lib  sim6502.lib  sim65c02.lib  supervision.lib  telestrat.lib  vic20.lib
tools/famistudio/: FamiStudio.ini
tools/famistudio/AutoSaves/: AutoSave00.fms  AutoSave01.fms  AutoSave02.fms  AutoSave03.fms  AutoSave04.fms  AutoSave05.fms  AutoSave06.fms  AutoSave07.fms
tools/nesst/: readme.txt
tools/nesst/src/: NESst.bdsproj  NESst.cpp  UnitCHREditor.cpp  UnitInputNumber.cpp  UnitInputNumber.dfm  UnitInputNumber.h  UnitMain.cpp  UnitMain.dfm  UnitMain.h  UnitManageMetasprites.cpp  UnitManageMetasprites.dfm  UnitManageMetasprites.h  UnitMetaspriteOffset.cpp  UnitMetaspriteOffset.dfm  UnitMetaspriteOffset.h  UnitName.cpp  UnitName.dfm  UnitName.h  UnitNametableOffset.cpp  UnitNametableOffset.dfm  UnitNametableOffset.h  UnitSetSize.cpp  UnitSetSize.dfm  UnitSetSize.h  UnitSwapColors.cpp  UnitSwapColors.dfm  UnitSwapColors.h
